--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
-	<body>
+	<body style="padding: 0;margin: 0;">
 		<div>%svelte.body%</div>
 	</body>
 </html>
