--- a/src/app.html
+++ b/src/app.html
@@ -3,11 +3,17 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png"/>
+		<link rel="icon" href="%svelte.assets%/favicon.png" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap"
+			rel="stylesheet"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
-	<body style="padding: 0;margin: 0;">
+	<body style="padding: 0; margin: 0">
 		<div>%svelte.body%</div>
 	</body>
 </html>
