--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,11 @@
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
 		<title>Todo</title>
+		<style>
+			*{
+				scroll-behavior: smooth;
+			}
+		</style>
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
