--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="" />
+		<meta name="description" content="Site is made by sveltekit" />
 		<title>Todo</title>
 		<style>
 			*{
